Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66153

[Reg] debug output no longer visible in Creator

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.0 Alpha
    • 5.11.0 Alpha
    • Core: Other
    • None
    • Linux, Creator 4.5.0

      After https://codereview.qt-project.org/215636, output from qDebug, qWarning etc. is no longer shown in the Application Output pane of Qt Creator. (If enabling "Run in terminal" instead, the debug output is shown ok in the opened terminal).

      From tracing it looks that the qDefaultMessageHandler() now does nothing since qt_logging_to_console() is false (no tty).

        For Gerrit Dashboard: QTBUG-66153
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            vgt Eirik Aavitsland
            Votes:
            0 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes